# minimax-scraper

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  refactor.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/ai/: chat.py  client.py  structure.py
backend/app/api/: ai.py  browse.py  jobs.py  ws.py
backend/app/discovery/: engine.py  llms_txt.py  sitemap.py
backend/app/models/: db.py  schemas.py
backend/app/scraper/: engine.py  extractor.py  fetcher.py  organizer.py
backend/app/storage/: database.py
backend/tests/: conftest.py
backend/tests/fixtures/: sample_doc_page.html  sample_llms.txt  sample_sitemap.xml  sample_sitemap_index.xml
backend/tests/test_ai/: test_chat.py  test_client.py  test_structure.py
backend/tests/test_api/: test_ai.py  test_browse.py  test_health.py  test_jobs.py  test_ws.py
backend/tests/test_discovery/: test_engine.py  test_llms_txt.py  test_sitemap.py
backend/tests/test_scraper/: test_extractor.py  test_fetcher.py  test_organizer.py
frontend/: Cargo.toml  Dioxus.toml
frontend/assets/: main.css
frontend/src/: app.rs  main.rs
frontend/src/api/: client.rs  types.rs
frontend/src/components/: ai_chat.rs  desktop.rs  explorer.rs  mod.rs  preview.rs  scraper.rs  terminal.rs  window.rs
frontend/src/hooks/: mod.rs  use_websocket.rs
frontend/src/state/: app_state.rs
