[package]
name = "minimax-scraper-frontend"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
dioxus = { version = "0.6", features = ["web"] }
dioxus-logger = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = ["http", "websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
tracing = "0.1"
